[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/state_machine/inspector/operator_button.gd" type="Script" id=1]
[ext_resource path="res://addons/state_machine/inspector/transition_item_graph_node.gd" type="Script" id=2]
[ext_resource path="res://addons/state_machine/icons/icon_choice_32.png" type="Texture" id=3]

[node name="TransitionItemGraphNode" type="GraphNode"]
margin_top = 68.0
margin_right = 92.0
margin_bottom = 102.0
size_flags_horizontal = 0
size_flags_vertical = 0
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 0.392157, 0.584314, 0.929412, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 0.498039, 0.313726, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="ConditionUsages" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 240.0
margin_bottom = 24.0
size_flags_vertical = 0

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 25.0
margin_right = 240.0
margin_bottom = 29.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 30.0
margin_right = 240.0
margin_bottom = 68.0
size_flags_vertical = 0

[node name="AddCondition(s)" type="Button" parent="HBoxContainer"]
margin_right = 151.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Add Condition(s)"
icon = ExtResource( 3 )

[node name="Operator" type="Button" parent="HBoxContainer"]
margin_left = 155.0
margin_right = 224.0
margin_bottom = 38.0
size_flags_horizontal = 3
text = "Operator"
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="ConditionFileDialog" type="FileDialog" parent="Node"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Open File(s)"
resizable = true
dialog_hide_on_ok = true
dialog_autowrap = true
mode = 1
filters = PoolStringArray( "*.tres" )

[node name="AcceptDialog" type="AcceptDialog" parent="Node"]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Wrong Resource Type Selected!"
dialog_text = "You need to select a StateConditionResource!"

[node name="ConditionDeleteConfirmationDialog" type="ConfirmationDialog" parent="Node"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
dialog_text = "Delete this ConditionUsage?"

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="Node"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
dialog_text = "Delete this ConditionUsage?"

[connection signal="close_request" from="." to="Node/DeleteConfirmationDialog" method="popup_centered"]
[connection signal="pressed" from="HBoxContainer/AddCondition(s)" to="Node/ConditionFileDialog" method="popup_centered"]
[connection signal="pressed" from="HBoxContainer/Operator" to="HBoxContainer/Operator" method="_on_pressed"]
[connection signal="value_changed" from="HBoxContainer/Operator" to="." method="_on_operator_changed"]
[connection signal="file_selected" from="Node/ConditionFileDialog" to="." method="_on_condition_file_selected"]
[connection signal="files_selected" from="Node/ConditionFileDialog" to="." method="_on_condition_files_selected"]
[connection signal="confirmed" from="Node/AcceptDialog" to="Node/ConditionFileDialog" method="popup_centered"]
[connection signal="confirmed" from="Node/DeleteConfirmationDialog" to="." method="_on_deleted"]
